--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "parcel": "^2.0.0-rc.0"
+    "parcel": "^2.2.1"
   },
   "scripts": {
     "dev": "parcel serve ./src/index.html",
